@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<metadata>
+    <version>001</version>
+    <dependencies>
+        <dependency>profile-plone.app.iterate:plone.app.iterate</dependency>
+    </dependencies>
+</metadata>
