@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="Collection"
+   meta_type="Dexterity FTI"
+   i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+  <property name="behaviors" purge="false">
+    <element value="plone.app.stagingbehavior.interfaces.IStagingSupport" />
+  </property>
+</object>
